--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Overpass:300,400,700|Poppins:200,400,700&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Overpass:300,400,700|Nunito:200,400,700&subset=latin-ext');
